gravity test fragment fully functional

--- a/app/src/main/res/layout/fragment_gravity_test.xml
+++ b/app/src/main/res/layout/fragment_gravity_test.xml
@@ -9,7 +9,43 @@
 
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
-        android:layout_height="300sp"
-        android:id="@+id/graph_view" />
+        android:layout_height="0sp"
+        android:layout_weight="1"
+        android:id="@+id/graph_view"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="18sp"
+            android:text="@string/x"
+            android:padding="10sp"
+            android:id="@+id/x_val"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="18sp"
+            android:text="@string/y"
+            android:padding="10sp"
+            android:id="@+id/y_val"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_blue_dark"
+            android:textSize="18sp"
+            android:text="@string/z"
+            android:padding="10sp"
+            android:id="@+id/z_val"/>
+
+    </LinearLayout>
 
 </LinearLayout>
