--- a/app/src/main/res/layout/fragment_gyroscope_test.xml
+++ b/app/src/main/res/layout/fragment_gyroscope_test.xml
@@ -1,14 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".view.test_activity.tests.gyroscope_test.GyroscopeTestFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="0sp"
+        android:layout_weight="1">
 
-</FrameLayout>
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorTextOne"
+            android:textSize="18sp"
+            android:text="@string/x"
+            android:padding="10sp"
+            android:id="@+id/x_val"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorTextOne"
+            android:textSize="18sp"
+            android:text="@string/y"
+            android:padding="10sp"
+            android:id="@+id/y_val"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorTextOne"
+            android:textSize="18sp"
+            android:text="@string/z"
+            android:padding="10sp"
+            android:id="@+id/z_val"/>
+
+    </LinearLayout>
+
+</LinearLayout>
