--- a/app/src/main/res/layout/fragment_linear_acc_test.xml
+++ b/app/src/main/res/layout/fragment_linear_acc_test.xml
@@ -5,10 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".view.test_activity.tests.linear_acceleration_test.LinearAccTestFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <include layout="@layout/graph_test_common_layout"/>
 
 </FrameLayout>
