--- a/app/src/main/res/layout/fragment_request_permissions.xml
+++ b/app/src/main/res/layout/fragment_request_permissions.xml
@@ -37,7 +37,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start"
+            android:gravity="center"
             android:padding="10sp"
             android:textSize="16sp"
             android:textColor="@color/green_shade_two"
