--- a/app/src/main/res/layout/graph_test_common_layout.xml
+++ b/app/src/main/res/layout/graph_test_common_layout.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="0sp"
         android:layout_weight="1"
-        android:id="@+id/graph_view"/>
+        android:id="@+id/graph_view"
+        android:layout_margin="5sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
