--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -25,61 +25,35 @@
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="40sp"
+                    android:layout_marginTop="?android:attr/actionBarSize"
                     android:id="@+id/list_screen">
-
-                    <!--75 margin for top and 22 + 5 = 32 for text-switcher-->
 
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="@color/colorMajorDark"
-                        android:layout_marginBottom="58sp"
                         android:layout_gravity="bottom"
-                        app:cardElevation="5sp"
+                        app:cardBackgroundColor="@color/colorMajorDark"
                         android:id="@+id/card_permissions">
 
-                        <LinearLayout
+                        <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:layout_width="0sp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:textColor="@color/white"
-                                android:textSize="15sp"
-                                android:paddingLeft="15sp"
-                                android:paddingTop="5sp"
-                                android:paddingBottom="5sp"
-                                android:text="@string/please_give_permissions"
-                                android:layout_gravity="center_vertical"
-                                tools:ignore="RtlHardcoded,RtlSymmetry"
-                                android:clickable="false"/>
-
-                            <ImageButton
-                                android:layout_width="40sp"
-                                android:layout_height="40sp"
-                                android:src="@drawable/baseline_disc_full_black_48"
-                                android:tint="@color/white"
-                                tools:ignore="ContentDescription"
-                                android:background="@color/transparent"
-                                android:padding="5sp"
-                                android:scaleType="centerInside"
-                                android:layout_gravity="center_vertical"
-                                android:clickable="false"/>
-
-                        </LinearLayout>
-
+                            android:textColor="@color/white"
+                            android:textSize="15sp"
+                            android:paddingLeft="10sp"
+                            android:paddingRight="10sp"
+                            android:paddingTop="5sp"
+                            android:paddingBottom="5sp"
+                            android:text="@string/please_give_permissions"
+                            android:gravity="center_horizontal"
+                            tools:ignore="RtlHardcoded,RtlSymmetry"
+                            android:clickable="false"/>
 
                     </android.support.v7.widget.CardView>
 
                     <android.support.v7.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="?attr/actionBarSize"
-                        android:layout_marginBottom="?attr/actionBarSize"
                         android:id="@+id/recycler">
 
                     </android.support.v7.widget.RecyclerView>
@@ -161,206 +135,11 @@
                         android:background="@color/colorTextThree"
                         tools:ignore="ContentDescription,SmallSp" />
 
-                    <TextSwitcher
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/header_text"
-                        android:background="@color/red_shade_four">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:textColor="@color/white"
-                            android:gravity="center"
-                            android:paddingTop="5sp"
-                            android:paddingBottom="5sp"
-                            android:textSize="22sp"/>
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:textColor="@color/white"
-                            android:gravity="center"
-                            android:paddingTop="5sp"
-                            android:paddingBottom="5sp"
-                            android:textSize="22sp"/>
-
-                    </TextSwitcher>
-
                 </LinearLayout>
 
             </FrameLayout>
 
         </FrameLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:layout_gravity="bottom"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1sp"
-                android:background="@color/colorTextThree"
-                tools:ignore="ContentDescription,SmallSp" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1sp"
-                android:background="@color/colorMajorDark"
-                tools:ignore="ContentDescription,SmallSp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:id="@+id/button_tests_list">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="0sp"
-                        android:layout_weight="1"
-                        android:tint="@color/red_shade_four"
-                        android:src="@drawable/baseline_device_unknown_black_48"
-                        android:background="@color/transparent"
-                        android:scaleType="centerInside"
-                        android:padding="7sp"
-                        tools:ignore="ContentDescription,NestedWeights"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="13sp"
-                        android:text="TESTS"
-                        android:gravity="center"
-                        android:layout_gravity="bottom"
-                        android:paddingBottom="3sp"
-                        android:textColor="@color/red_shade_four"/>
-
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="1sp"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorTextFive"
-                    tools:ignore="ContentDescription,SmallSp" />
-
-                <LinearLayout
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:id="@+id/button_sensors_list">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="0sp"
-                        android:layout_weight="1"
-                        android:tint="@color/red_shade_four"
-                        android:src="@drawable/baseline_mobile_friendly_black_48"
-                        android:background="@color/transparent"
-                        android:scaleType="centerInside"
-                        android:padding="7sp"
-                        tools:ignore="ContentDescription,NestedWeights"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="13sp"
-                        android:text="SENSORS"
-                        android:gravity="center"
-                        android:layout_gravity="bottom"
-                        android:paddingBottom="3sp"
-                        android:textColor="@color/red_shade_four"/>
-
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="1sp"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorTextFive"
-                    tools:ignore="ContentDescription,SmallSp" />
-
-                <LinearLayout
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:id="@+id/button_features_list">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="0sp"
-                        android:layout_weight="1"
-                        android:tint="@color/red_shade_four"
-                        android:src="@drawable/baseline_battery_charging_full_black_48"
-                        android:background="@color/transparent"
-                        android:scaleType="centerInside"
-                        android:padding="7sp"
-                        tools:ignore="ContentDescription,NestedWeights"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="13sp"
-                        android:text="FEATURES"
-                        android:gravity="center"
-                        android:layout_gravity="bottom"
-                        android:paddingBottom="3sp"
-                        android:textColor="@color/red_shade_four"/>
-
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="1sp"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorTextFive"
-                    tools:ignore="ContentDescription,SmallSp"
-                    android:visibility="gone"/>
-
-                <LinearLayout
-                    android:layout_width="0sp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:id="@+id/button_rate_experience"
-                    android:visibility="gone">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="0sp"
-                        android:layout_weight="1"
-                        android:tint="@color/red_shade_four"
-                        android:src="@drawable/baseline_verified_user_black_48"
-                        android:background="@color/transparent"
-                        android:scaleType="centerInside"
-                        android:padding="2sp"
-                        tools:ignore="ContentDescription,NestedWeights"
-                        android:layout_marginBottom="5sp"/>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:text="EXPERIENCE"
-                        android:gravity="center"
-                        android:layout_gravity="bottom"
-                        android:paddingBottom="3sp"
-                        android:textColor="@color/red_shade_four"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
 
     </FrameLayout>
 
