--- a/app/src/main/res/layout/row_dashboard.xml
+++ b/app/src/main/res/layout/row_dashboard.xml
@@ -8,7 +8,8 @@
     android:orientation="vertical"
     android:layout_margin="8sp"
     app:cardCornerRadius="10sp"
-    app:cardElevation="5sp">
+    app:cardElevation="5sp"
+    android:id="@+id/parent_card">
 
     <LinearLayout
         android:layout_width="match_parent"
