row layout for generic data adapter set with categories theme

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -54,7 +54,8 @@
                     <android.support.v7.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:id="@+id/recycler">
+                        android:id="@+id/recycler"
+                        android:background="@color/colorIntensity8">
 
                     </android.support.v7.widget.RecyclerView>
 
