--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -8,22 +8,42 @@
     android:id="@+id/data_card"
     android:clickable="false"
     tools:layout_width="100sp"
-    android:layout_margin="4sp">
+    android:layout_margin="6sp"
+    app:cardCornerRadius="15sp"
+    app:cardElevation="4sp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/card_background">
+        android:layout_margin="5sp">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="100sp"
-            android:id="@+id/data_drawable"
-            android:padding="25sp"
-            tools:ignore="ContentDescription"
-            android:tint="@color/colorMajorDark"
-            tools:src="@drawable/baseline_bluetooth_black_48"/>
+        <FrameLayout
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="5sp"
+            android:padding="5sp">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="25sp"
+                app:cardElevation="0sp"
+                app:cardBackgroundColor="@color/colorPrimaryLightLight">
+
+            </android.support.v7.widget.CardView>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/baseline_verified_user_black_48"
+                android:padding="10sp"
+                android:tint="@color/colorMajorDark"
+                tools:ignore="ContentDescription"
+                android:id="@+id/data_drawable"/>
+
+        </FrameLayout>
 
         <TextView
             android:id="@+id/data_name"
@@ -32,7 +52,8 @@
             android:gravity="center"
             android:padding="4sp"
             tools:text="LIGHT"
-            android:textColor="@color/colorMajorDark" />
+            android:textColor="@color/colorMajorDark"
+            android:maxLines="1"/>
 
     </LinearLayout>
 
