--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -18,9 +18,9 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:textSize="35sp"
-            android:textColor="@color/colorMajorDark"
-            fontPath="fonts/one.ttf"
+            android:textColor="@color/colorMajorDarkMuchLighter"
             android:text="@string/app_name_simple"
+            fontPath="fonts/one.ttf"
             tools:ignore="MissingPrefix" />
 
     </android.support.v7.widget.CardView>
