--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -100,9 +100,11 @@
                                 android:layout_height="match_parent"
                                 android:gravity="center"
                                 android:textSize="32sp"
-                                android:textColor="@color/colorMajorDark"
-                                android:text="@string/sense_it_all"
-                                android:id="@+id/app_header_text"/>
+                                android:textColor="@color/colorMajorDarkMuchLighter"
+                                tools:text="Diagnostic"
+                                fontPath="fonts/one.ttf"
+                                android:id="@+id/app_header_text"
+                                tools:ignore="MissingPrefix" />
 
                             <EditText
                                 android:layout_width="match_parent"
