--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorTextFive"
+    android:background="@color/colorIntensity8"
     tools:context=".view.detail_activity.DetailActivity">
 
     <LinearLayout
@@ -33,7 +33,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="21sp"
+                    android:textSize="18sp"
                     tools:text="FINGERPRINT SENSOR TEST"
                     android:paddingTop="10sp"
                     android:paddingBottom="10sp"
@@ -46,7 +46,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:cardBackgroundColor="@color/colorMajorDark"
-                    app:cardCornerRadius="15sp"
+                    app:cardCornerRadius="13sp"
+                    app:cardElevation="0sp"
                     android:layout_marginLeft="10sp"
                     android:layout_marginBottom="10sp"
                     tools:ignore="RtlHardcoded,RtlSymmetry">
@@ -54,7 +55,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp"
+                        android:textSize="15sp"
                         tools:text="Sensor"
                         android:textColor="@color/white"
                         android:paddingLeft="10sp"
@@ -68,16 +69,32 @@
 
             </LinearLayout>
 
-            <ImageView
-                android:layout_width="70sp"
-                android:layout_height="70sp"
-                tools:src="@drawable/baseline_bluetooth_black_48"
-                android:tint="@color/colorMajorDark"
-                android:scaleType="centerInside"
-                android:padding="10sp"
+            <FrameLayout
+                android:layout_width="60sp"
+                android:layout_height="60sp"
                 android:layout_gravity="center_vertical"
-                tools:ignore="ContentDescription"
-                android:id="@+id/data_drawable"/>
+                android:layout_margin="5sp"
+                android:padding="5sp">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="25sp"
+                    app:cardElevation="0sp"
+                    app:cardBackgroundColor="@color/colorPrimaryLightLight">
+
+                </android.support.v7.widget.CardView>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/baseline_verified_user_black_48"
+                    android:padding="10sp"
+                    android:tint="@color/colorMajorDark"
+                    tools:ignore="ContentDescription"
+                    android:id="@+id/data_drawable"/>
+
+            </FrameLayout>
 
         </LinearLayout>
 
