--- a/app/src/main/res/layout/row_dashboard.xml
+++ b/app/src/main/res/layout/row_dashboard.xml
@@ -8,14 +8,15 @@
     android:orientation="vertical"
     android:layout_margin="8sp"
     app:cardCornerRadius="10sp"
-    app:cardElevation="5sp"
-    android:id="@+id/parent_card">
+    app:cardElevation="5sp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5sp"
-        android:orientation="vertical">
+        android:padding="5sp"
+        android:orientation="vertical"
+        android:background="@drawable/card_background"
+        android:id="@+id/parent_card">
 
         <FrameLayout
             android:layout_width="60sp"
