--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -8,6 +8,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.dashboard_activity.dashboard_fragment.DashboardFragment">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1sp"
+        android:background="@color/colorTextFive"
+        tools:ignore="ContentDescription,SmallSp" />
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
@@ -17,11 +23,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="35sp"
+            android:textSize="30sp"
             android:textColor="@color/colorMajorDarkMuchLighter"
-            android:text="@string/app_name_simple"
-            fontPath="fonts/one.ttf"
-            tools:ignore="MissingPrefix" />
+            android:text="@string/app_name_simple"/>
+
+        <!--fontPath="fonts/one.ttf"-->
+        <!--tools:ignore="MissingPrefix"-->
 
     </android.support.v7.widget.CardView>
 
