--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,7 @@
     <color name="green_shade_one">#1E4000</color>
     <color name="green_shade_two">#3C7F00</color>
     <color name="green_shade_three">#5ABF00</color>
+    <color name="green_shade_three_tx">#ac5abf00</color>
     <color name="green_shade_four">#77FF00</color>
 
     <color name="red_shade_one">#400007</color>
@@ -39,7 +40,7 @@
     <color name="red_shade_three">#FF4C5C</color>
     <color name="red_shade_three_less_vibrant">#d94f5b</color>
     <color name="red_shade_four">#FF7B86</color>
-    <color name="red_shade_four_tx">#bfff7b86</color>
+    <color name="red_shade_four_tx">#94ff7b86</color>
     <color name="red_shade_five">#fff5f6</color>
     <color name="red_shade_six">#ffa7af</color>
 
