android versions generic done all (w/o images)

--- a/app/src/main/res/layout/fragment_nougat.xml
+++ b/app/src/main/res/layout/fragment_nougat.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".view.detail_activity.android.version_nougat.NougatFragment">
 
-    <include layout="@layout/layout_web_view"/>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <!--<include layout="@layout/layout_web_view"/>-->
 
 </FrameLayout>
